fix visible number of items

--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -550,7 +550,7 @@
                 @include square(30px);
                 @include rounded(30px);
                 box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.1);
-                padding:6px;
+                padding:5px;
                 background-color: $white;
                 color:$blue-darker-2;
                 @include font(30px,16px);
@@ -567,6 +567,7 @@
                 @include font(20px,44px,500);
                 color:$black;
                 border:0;
+                padding:0;
             }
         }
         
